--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -1,7 +1,6 @@
-.navbar {
-    margin-bottom: 0;
-}
-
+/*
+    Landing Page
+*/
 html,#landingPage, #pt{
     width: 100;
     height: 100vh;
@@ -26,7 +25,38 @@ html,#landingPage, #pt{
     font: bold;
 }
 
-.fa{
+/*
+    Nav Bar
+*/
+.navbar {
+    margin-bottom: 0;
+}
+
+/*
+    Homepage
+*/
+#homepage_banner{
+    background-color: white;
+}
+#hompage_content{
+    background-color: #e9ecef;
+}
+#white_background_text{
+    color:#444649;
+}
+#homepage_icons{
+    color:#21c2c8;
+    font-size: 120px;
+}
+#homepage_icon_text{
+    color: #616161;
+    line-height: 75%;
+}
+
+/*
+    Footer
+*/
+#footer_icon{
     color:#999c9f;
 }
 
