--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -60,6 +60,9 @@ html,#landingPage, #pt{
     color:#c2c6c6;
     font-size: 240px;
 }
+#homepage_skills{
+    background-color: white;
+}
 
 /*
     Footer
