--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -8,6 +8,8 @@ html,#landingPage, #pt{
 
 #pt_canvas{
     height: 100vh;
+    /*pointer-events: none; currently works for mobile but disable all canvas*/
+    touch-action: pan-y;
 }
 #landingPage{
     position: relative;
