Added style to thankyou page and bolded hompage link

--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -82,9 +82,19 @@ html,#landingPage, #pt{
 }
 
 /*
-    Contact Page
+    Thanks Page
 */
-
+#thankspage_icons{
+    color:#21c2c8;
+    font-size: 120px;
+}
+#blue_text{
+    color:#21c2c8;
+}
+#thankspage_line{
+    border-top: 2px solid #444649;
+    width: 50%;
+}
 
 /*
     Footer
