--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -114,6 +114,11 @@ html,#landingPage, #pt{
     font-size: 120px;
 }
 
+#thankspage_sm_icons{
+    color:#21c2c8;
+    font-size: 16px;    
+}
+
 /*
     Error Page
 */
