Certification Page Phone Fix

--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -116,7 +116,7 @@ html,#landingPage, #pt{
 
 #thankspage_sm_icons{
     color:#21c2c8;
-    font-size: 16px;    
+    /*font-size: 16px;*/    
 }
 
 /*
